--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class="d-flex flex-column align-items-center container">
+<div class="d-flex flex-column align-items-center container login" style="height: 800px;">
     <h3>로그인</h3>
     <br />
     <hr />
