--- a/templates/login/reset_password.html
+++ b/templates/login/reset_password.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-<div class="d-flex flex-column align-items-center container">
+<div class="d-flex flex-column align-items-center container login" style="height: 800px;">
     <h3>비밀번호 재설정</h3>
     <br />
     <hr />
