--- a/templates/login/send_email.html
+++ b/templates/login/send_email.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="d-flex justify-content-center mt-5">
-    <h3>메일을 전송하였습니다. 메일함을 확인해주세요.</h3>
+<div class="container login">
+    <h3>학교 인증</h3>
+    <br />
+    <hr />
+    <p class="sending-mail">메일을 전송하였습니다. 메일함을 확인해주세요.</p>
 </div>
 {% endblock %}
