--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container ml-5 mt-4 w-75">
+<div class="container login"  style="height: 900px;">
     <h3>회원가입</h3>
     <br />
     <hr />
