--- a/static/css/pages/login.css
+++ b/static/css/pages/login.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-h3 {
+.login h3 {
   font-weight: bold;
   font-size: 32px;
   margin-top: 40px;
@@ -13,6 +13,7 @@ hr {
   height: 1px;
   width: 100%;
   color: var(--m-gray);
+  margin: 30px 0;
 }
 
 .login-input {
@@ -21,8 +22,12 @@ hr {
   padding: 9px 0px 9px 12px;
   font-size: 15px;
   width: 300px;
-  color: var(--m-gray);
   margin-top: 10px;
+  color: var(--d-gray);
+}
+
+.login-input::placeholder {
+  color: var(--m-gray);
 }
 
 .login-input:focus {
