--- a/templates/foreign/univ_list.html
+++ b/templates/foreign/univ_list.html
@@ -1,30 +1,34 @@
 {%extends "base.html"%}
 {%block content%}
-<div class="mx-5 mt-5">
-    <div>
-    <span class="foreign_list mt-5">
-    {% for key, val in univ_dict.items %}
-    <a href="#{{ key }}" class="alpha">{{ key }}</a>
-    {% endfor %}
-    </span>
+<div class="lbody ">
 
-    <button class="btn btn-sm btn-border btn-primary mx-5 addForeign" onclick="location.href='{% url "foreign:univ_search" %}'">학교 추가</button>
-    </div>
-    <div class="mx-4">
+    <div class="lbar d-flex align-items-center">
+    <div class="lforeign_list d-flex justify-content-around text-center ">
     {% for key, val in univ_dict.items %}
-            <h3 id="{{ key }}">{{ key }}</h3>
+    <a href="#{{ key }}" class="lbar_alpha">{{ key }}</a>
+    {% endfor %}
+    </div>
+    <button class="lgbtn" onclick="location.href='{% url "foreign:univ_search" %}'">학교 추가</button>
+</div>
+    <div>
+    {% for key, val in univ_dict.items %}
+    <div class="lgroup d-flex">
+            <div id="{{ key }}" class="lalpha">{{ key }}</div>
+            <div class="lforeign_name ">
             {% for univ in val %}
                 <a href="{% url "foreign:wiki" univ.pk%}">{{univ.away_name}}</a>
             {% endfor %}
+            </div>
         <br>
+    </div>
     {% endfor %}
-</div>
-</div>
 
+</div>
+</div>
 <script>
 function list(startAlpha){
-    var parent = document.querySelector('.foreign_list')
-    var foreign_list = document.querySelectorAll(`.foreign_list .alpha`);
+    var parent = document.querySelector('.lforeign_list')
+    var foreign_list = document.querySelectorAll(`.lforeign_list .lbar_alpha`);
     var startnum =startAlpha.charCodeAt(0);
     
     for(i=0;i<foreign_list.length;i++){
